# vulkan_notes

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: HandleVulkanDeps.cmake
examples/glad_loader/: CMakeLists.txt  main.cpp
examples/volk_loader/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/client/: CMakeLists.txt  defines.h  file_system.cpp  file_system.h  log_assert.h  main.cpp  utils.cpp  utils.h  vulkan_renderer.cpp  vulkan_types.h
src/client/include/: vulkan_renderer.h
